--- a/source/repos/MedShop/MedShop/dbsettings.json
+++ b/source/repos/MedShop/MedShop/dbsettings.json
@@ -1,5 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=MedShop;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=MedShop;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "AzureConnection":  "Server=tcp:medshop.database.windows.net,1433;Database=coreDB;User ID=lubakach;Password=26021982Luba;Encrypt=true;Connection Timeout=30;"
   }
 }
